syntax = "proto3";

option go_package = "internal/pkg/auth/delivery/grpc/generated";

message SignInPayload {
  string Login = 1;
  string Password = 2;
}

message Profile {
  string Id = 1;
  string Login = 2;
  string Description = 3;
  string ImgSrc = 4;
  string Phone = 5;
  bytes PasswordHash = 6;
}

service AuthService {
  rpc SignIn(SignInPayload) returns (Profile) {}
}
